# code-demo

./: .gitignore
Cpp/GTK4/libadwaita-demo/src/: main.cpp
Cpp/GTKmm/box-and-button/src/: demo.cpp
Cpp/GTKmm/grid/: meson.build
Cpp/GTKmm/grid/src/: my_grid.cpp  window.cpp
Cpp/GTKmm/mouse_motion/include/: text.h
Cpp/GTKmm/mouse_motion/src/: window.cpp
Cpp/GTKmm/pango-markup/src/: text.cpp
Cpp/GTKmm/pango-text/include/: text.h
Cpp/GTKmm/pango-text/src/: main.cpp  text.cpp
Cpp/GTKmm/seven-segment/: meson.build
Cpp/GTKmm/seven-segment/src/: window.cpp
Cpp/ImGui/demo/: imgui.ini
Cpp/ImGui/docking/: imgui.ini
Cpp/ImGui/drawing/: imgui.ini
Cpp/ImGui/drawing/src/: my_win.cpp
Cpp/ImGui/example/: color_picker.cpp
Cpp/SDL2/demo/: CMakeLists.txt
Cpp/SDL2/demo/src/: app.cpp
Cpp/SDL2/enemy-follow/include/: text.h
Cpp/SDL2/enemy-follow/src/: enemy.cpp  text.cpp
Cpp/SDL2/font/src/: font.cpp
Cpp/SDL2/sdl2-template-cmake/src/: game.cpp  main.cpp
Cpp/SDL2/sdl2-template-meson/src/: game.cpp  game.h  main.cpp
Cpp/SDL2/verlet-02/: CMakeLists.txt
Cpp/SFML/angle_1/src/: demo.cpp
Cpp/SFML/angle_2/: CMakeLists.txt
Cpp/SFML/code-archive/: shooting_game.cpp
Cpp/SFML/shooting/: CMakeLists.txt
Web/Javascript/object/: blackpink.json
Web/Note/: container_alignment.txt  svg.txt
Web/flexbox/: flexbox.html
Web/grid/: grid.css
Web/position/: position.css  position.html
Web/progress_ring/: progress_ring.css  progress_ring.html
Web/table/: table.html
Web/text_in_middle_div/: text_in_middle_div.html
avr/: Makefile
bash/: prompt.md  prompt.txt
cpp/Box2D/: Box2D note.txt
cpp/Box2D/demo/: CMakeLists.txt
cpp/Box2D/demo/src/: main.cpp
cpp/GTKmm/box-and-button/: CMakeLists.txt
cpp/GTKmm/box-and-button/include/: app.h
cpp/GTKmm/mouse_motion/src/: text.cpp
cpp/GTKmm/pango-markup/src/: window.cpp
cpp/GTKmm/seven-segment/include/: seven_segment.h
cpp/GTKmm/seven-segment/src/: seven_segment.cpp
cpp/ImGui/demo/: meson.build
cpp/ImGui/docking/src/: docking.cpp
cpp/ImGui/drawing/src/: drawing.cpp
cpp/ImGui/example/: template.cpp
cpp/SDL2/demo/include/: app.h
cpp/SDL2/demo/src/: fps.cpp
cpp/SDL2/font/: CMakeLists.txt
cpp/SDL2/sdl2-template-cmake/src/: game.h
cpp/SDL2/sdl2-template-meson/: meson.build
cpp/SDL2/verlet-01/: verlet.txt
cpp/SDL2/verlet-01/src/: verlet.cpp
cpp/SFML/angle_1/src/: CMakeLists.txt
cpp/SFML/code-archive/: text_move.cpp
cpp/SFML/shooting/src/: CMakeLists.txt  shooting.cpp
cpp/box2d/: Box2D note.txt
cpp/box2d/demo/: CMakeLists.txt
cpp/box2d/demo/src/: main.cpp
cpp/cpp-project-generators/: project_gen_gtkmm.sh  project_gen_ucrt64.sh  project_gen_ucrt64_sdl2.sh  project_gen_ucrt64_sfml.sh  project_gen_ucrt64_wxwidgets.sh
cpp/gtk4/adw-box/: meson.build
cpp/gtk4/adw-button-click-ui/: example.ui  main.c
cpp/gtk4/adw-button-click-xml/src/: demo-application.c  demo-window.c  demo.gresource.xml  main.c
cpp/gtk4/adw-button-demo/src/: main.c
cpp/gtk4/adw-click-demo/: main.c
cpp/gtk4/adw-drawingarea-xml/: meson.build
cpp/gtk4/adw-ui-demo/: main.c
cpp/gtk4/gtk4-xml-template/: meson.build
cpp/gtk4/libadwaita-demo/: meson.build
cpp/gtk4/libadwaita-template/: meson.build
cpp/gtk4/libadwaita-template/src/: main.c
cpp/gtkmm/box-and-button/: CMakeLists.txt
cpp/gtkmm/box-and-button/src/: app.cpp  app.h
cpp/gtkmm/grid/: meson.build
cpp/gtkmm/mouse_motion/: meson.build
cpp/gtkmm/pango-markup/: meson.build
cpp/gtkmm/pango-markup/include/: window.h
cpp/gtkmm/pango-markup/src/: text.cpp  text.h  window.cpp
cpp/gtkmm/pango-text/: meson.build
cpp/gtkmm/seven-segment/: meson.build
cpp/gtkmm/seven-segment-button/: meson.build
cpp/gtkmm/seven-segment-button/src/: seven_segment.cpp  seven_segment.h  window.cpp  window.h
cpp/imgui/demo/: meson.build
cpp/imgui/demo/src/: demo.cpp
cpp/imgui/demo/src/imgui/: imgui_impl_sdl2.cpp
cpp/imgui/docking/: meson.build
cpp/imgui/drawing/: meson.build
cpp/imgui/example/: color_picker.cpp  template.cpp
cpp/imgui/verlet/: meson.build
cpp/imgui/verlet/src/: main.cpp  verlet.cpp  verlet.h
cpp/project-generator/: project_gen_ucrt64.sh  project_gen_ucrt64_sdl2.sh  project_gen_ucrt64_sfml.sh  project_gen_ucrt64_wxwidgets.sh
cpp/sdl2/demo/: CMakeLists.txt
cpp/sdl2/enemy-follow/: CMakeLists.txt
cpp/sdl2/font/: CMakeLists.txt
cpp/sdl2/sdl2-template-cmake/: CMakeLists.txt
cpp/sdl2/sdl2-template-meson/: meson.build
cpp/sdl2/sdl2-template-meson-smart-ptr/: meson.build
cpp/sdl2/sdl2-template-meson/src/: game.cpp  game.h  main.cpp
cpp/sdl2/sdl2-template-meson/src/engine/: fps.h
cpp/sdl2/verlet-01/: CMakeLists.txt
cpp/sdl2/verlet-02/: verlet.txt
cpp/sfml/angle_1/: CMakeLists.txt
cpp/sfml/angle_2/: Note.txt
cpp/sfml/code-archive/: shooting_game.cpp  text_move.cpp
cpp/sfml/graph/: meson.build
cpp/sfml/quarter-circle/: meson.build
cpp/sfml/sfml-meson-template/: meson.build
cpp/sfml/shooting/: CMakeLists.txt
cpp/sfml/sin-wave/: meson.build
cpp/sfml/sin-wave/src/: graph.cpp  graph.hpp
cpp/sfml/verlet/: meson.build
cpp/wxwidgets/demo-cmake-v1/: CMakeLists.txt
cpp/wxwidgets/demo-cmake-v2/: CMakeLists.txt
cpp/wxwidgets/demo-cmake-v2/src/: main.cpp
cpp/wxwidgets/elsa/: CMakeLists.txt
cpp/wxwidgets/elsa/src/: elsa.cpp
cpp/wxwidgets/sizer-001/: CMakeLists.txt
cpp/wxwidgets/sizer-001/src/: sizer.cpp
powershell/: code-generator.ps1  ps1-prompt.ps1
rust/gtk4-code/: box.rs  button.rs
sdl2/: sdl2-build-command.txt
web/Javascript/function/: function.html  function.js
web/Javascript/object/: blackpink.json  object.html  object.js
web/Note/: color.txt  container_alignment.txt  svg.txt  table_scheme.txt  vertical-align.txt
web/button_click/: button_click.css  button_click.html  button_click.js
web/flexbox/: flexbox.css  flexbox.html
web/grid/: grid.css  grid.html
web/position/: position.css  position.html
web/progress_ring/: progress_ring.css  progress_ring.html  progress_ring.js
web/svg/: svg.html
web/table/: table.css  table.html
web/text_in_middle_div/: text_in_middle_div.html
(+88 files in other folders)
